# employee-management

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: settings.py  urls.py
employees/: admin.py  models.py  permissions.py  views.py
employees/migrations/: 0001_initial.py  0002_alter_employee_manager.py  0003_alter_employee_options_and_more.py  0004_alter_employee_level_alter_employee_manager_and_more.py  0005_alter_employee_options_alter_employee_total_paid.py  0006_employee_user.py  0007_alter_employee_user.py  0008_alter_employee_user.py  0009_alter_employee_user.py  0010_alter_employee_user.py  0011_alter_employee_user.py  0012_alter_employee_user.py
